make use of "use"

--- a/components/Pads.module.scss
+++ b/components/Pads.module.scss
@@ -1,8 +1,10 @@
 .Pads {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content: center;
   max-width: 780px;
+  margin: 0;
+  padding: 0;
 
   > button {
     margin: 0.5rem;
