--- a/components/atoms/PlayButton.module.scss
+++ b/components/atoms/PlayButton.module.scss
@@ -1,8 +1,10 @@
+@use "variables";
+
 .PlayButton {
   width: 118px;
   height: 68px;
   background: #e0e0e0;
-  box-shadow: -5px 5px 10px #bebebe, 5px -5px 10px #ffffff;
+  box-shadow: -5px 5px 10px #bebebe, 5px -5px 10px variables.$white;
   position: relative;
   display: inline-block;
   padding: 25px 30px;
@@ -25,7 +27,8 @@
   }
 
   &--pushed {
-    box-shadow: inset -5px 5px 10px #bebebe, inset 5px -5px 10px #ffffff;
+    box-shadow: inset -5px 5px 10px #bebebe,
+      inset 5px -5px 10px variables.$white;
   }
 
   &--play {
