--- a/components/molecules/Digits.module.scss
+++ b/components/molecules/Digits.module.scss
@@ -258,9 +258,7 @@ $d-right: $gap + $d-width;
   visibility: hidden;
 }
 
-/* 8 */
-.digits div.eight {
-}
+/* 8（不要） */
 
 /* 9 */
 .digits div.nine .d4,
